Sending email feature  (#63)
* First half on the doucmentation

* The zoom bug fixed

* Pop-up markers

* Git stuff

* Travis

* Deleted places.json\

* Fix ./

* Create credentials.json

* The changes with the credential

* Credentials removed

* Sending e-mail function

* Sending e-mail function

* No coverage folder

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "login.js",
   "scripts": {
-    "test": "jest && jshint server.js"
+    "test": "jest --coverage && jshint server.js"
   },
   "author": "Edmund Ya",
   "license": "ISC",
@@ -15,11 +15,13 @@
     "hbs": "^4.0.1",
     "jsdoc": "^3.5.5",
     "mysql": "^2.15.0",
+    "nodemailer": "^4.6.4",
     "request": "^2.85.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
     "jest": "^22.4.3",
-    "jshint": "^2.9.5"
+    "jshint": "^2.9.5",
+    "unit-coverage": "^4.0.3"
   }
 }
