Fixed the email bug (#83)
* First half on the doucmentation

* The zoom bug fixed

* Pop-up markers

* Git stuff

* Travis

* Deleted places.json\

* Fix ./

* Create credentials.json

* The changes with the credential

* Credentials removed

* Sending e-mail function

* Sending e-mail function

* No coverage folder

* Trying to secure stuff

* Added credentials

* jshintrc to avoid const errors

* semicols error

* semicols error

* semicols error

* semicols error

* semicols error

* Sending email feature

* Update .gitignore

* skipped email test

* Update server.js

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "crypto": "^1.0.1",
+    "email-templates": "^3.6.0",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "hbs": "^4.0.1",
     "jsdoc": "^3.5.5",
     "mysql": "^2.15.0",
     "nodemailer": "^4.6.4",
+    "pug": "^2.0.3",
     "request": "^2.85.0"
   },
   "devDependencies": {
